In section 1, classes section1-bold and section-1-subtext added

--- a/style.css
+++ b/style.css
@@ -33,11 +33,21 @@ li{
 /*content container may not be necessary*/
 
 .section1{ 
-
+    display: flex;
+    background-color: #1F2937;
+    color: white;
 }
 
 .awesomeness-blurb{
 
+}
+
+.section1-bold{
+
+}
+
+.section1-subtext{
+    
 }
 
 .button1{
