--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ li{
     margin-top: 0px;
     margin-bottom: 8px;
     margin-right: 16px;
+    color: #E5E7EB;
 }
 
 .button1{
@@ -157,37 +158,95 @@ li{
 }
 
 .section3{
+    display: flex;
+    background-color: #E5E7EB;
+    justify-content: center;
+    align-items: center;
+}
 
+.quote-wrapper{
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-top: 72px;
+    margin-bottom: 72px;
 }
 
 .quote{
-
+    font-weight: 400;
+    font-size: 36px;
+    font-style: italic;
+    margin: 0px;
+    max-width: 870px;
 }
 
 .quote-author{
-
+    display: flex;
+    justify-content: flex-end;
+    font-size: 24px;
+    margin: 0px;
+    font-weight: 700;
 }
 
 .section4{
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .blue-box{
+    display: flex;
+    margin-top: 72px;
+    margin-bottom: 72px;
+    border-radius: 7px;
+    background-color: #3882F6;
+    justify-content: flex-start;
+    justify-content: space-between;
+    align-items: center;
+    width: 750px;
+    height: 115px;
+}
 
+.blue-box-text{
+    display: flex;
+    flex-direction: column;
+    margin-left: 64px;
 }
 
 .bold-blue-box{
-
+    font-size: 18px;
+    color: white;
+    font-weight: 700;
+    margin-bottom: 4px;
 }
 
 .faint-blue-box{
-
+    font-size: 12px;
+    color: #E5E7EB;
+    margin-top: 0px;
+    margin-bottom: 24px;
 }
 
 .button2{
-
+    margin-right: 64px;
+    border: none;
+    outline: none;
+    background-color: #3882F6;
+    border-radius: 7px;
+    color: white;
+    border: 2px solid white;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 
 .footer{
-    
+    display: flex;
+    color: #E5E7EB;
+    background-color: #1F2937;
+    justify-content: center;
+    align-items: center;
+    height: 64px;
+    font-size: 16px;
+    font-weight: 400;
 }
